# db-lang

./: .env.example  .gitignore  CHANGELOG.md  EXECUTION_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE.md  README.md  SECURITY.md  build-dmg.sh  components.json  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/manifest/: latest.json
.nuxt/manifest/meta/: dev.json
.nuxt/types/: build.d.ts  components.d.ts  imports.d.ts  layouts.d.ts  modules.d.ts  nitro-imports.d.ts  plugins.d.ts
.output/: nitro.json
.output/public/: 200.html
.output/public/_nuxt/: BJ1-vD8e.js  BJ8zrGqq.js  BKtBvZlv.js  BUXdIK31.js  BXwoForr.js  (+15 more)
app/: app.vue
app/components/: ColorModeToggle.vue
app/composables/: useAppSettings.ts  useAppUpdater.ts  useConnection.ts  useQuery.ts  useSchemaKb.ts  useTauri.ts
app/constants/: engines.ts  menus.ts
app/layouts/: default.vue
app/lib/: utils.ts
app/pages/: history.vue  index.vue  schema.vue  settings.vue
app/plugins/: tauri.client.ts
app/stores/: connections.ts  history.ts  snippets.ts
app/types/: database.ts  nav.ts  query.ts
db-lang/: package-lock.json  package.json
db-lang/src/: App.vue  DbConnector.vue
db-lang/src-tauri/: tauri.conf.json
src/: Home.vue  QueryInterface.vue  ResultsTable.vue  index.css  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_db.rs  commands.rs  connection_pool.rs  database.rs  export.rs  gemini.rs  lib.rs  main.rs  schema_kb.rs
src-tauri/src/drivers/: firebase_auth.rs  firebase_rtdb.rs  firestore.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs
src/components/: ConnectionModal.vue  DataInsights.vue  ExportModal.vue  FilterPanel.vue  Login.vue  PaginationControls.vue  Pricing.vue  QueryExplanation.vue  QueryHistory.vue  SchemaExplorer.vue  SettingsModal.vue  Signup.vue  SnippetManager.vue
src/router/: index.ts
src/stores/: connections.ts  history.ts  snippets.ts
(+37 files in other folders)
