[package]
name = "db-lang"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "db_lang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
mysql_async = "0.31"
rusqlite = { version = "0.28", features = ["bundled"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
rust_xlsxwriter = "0.79"
base64 = "0.22"
regex = "1.10"

